# dual-governance

./: .env.example  .gitignore  .gitmodules  .solhint.json  README.md  forge-run.sh  foundry.toml  hardhat.config.js  kontrol.toml  package-lock.json  package.json  pyproject.toml  requirements.txt  run-script.sh  slither.config.json
.devcontainer/: Dockerfile  devcontainer.json
.github/: CODEOWNERS
addresses/: holesky-addresses.sol  mainnet-addresses.sol
certora/: README.md
commands/: run-complete-rage-quit-test.sh  run-forge-script.sh  run-integration-tests.sh  run-regressions-tests.sh  run-scenario-tests.sh  run-solvency-simulation-test.sh  run-unit-tests.sh
contracts/: Agent.sol  Blueprint.sol  BurnerVault.sol  CommitteesFactory.sol  Configuration.sol  ConfigurationProvider.sol  DualGovernance.sol  DualGovernanceConfigProvider.sol  DualGovernanceConfiguration.sol  DualGovernanceTimelockController.sol  EmergencyActivationCommittee.sol  EmergencyActivationMultisig.sol  EmergencyExecutionCommittee.sol  EmergencyExecutionMultisig.sol  EmergencyProtectedTimelock.sol  Escrow.sol  EscrowWithChangedMechanics_draft.sol  ExecutiveCommittee.sol  Executor.sol  GateSeal.sol  GateSealBreaker.sol  GovernanceState.sol  ImmutableDualGovernanceConfigProvider.sol  MasterCopy.sol  OwnableExecutor.sol  ProposersFacadeScratchpad.sol  ProposersTimelockLaunchpad.sol  ResealCommittee.sol  ResealExecutor.sol  ResealManager.sol  RestrictedMultisigBase.sol  SealBreaker.sol  SingleGovernance.sol  SingleGovernanceTimelockController.sol  ThinDualGovernanceScratchpad.sol  Tiebreaker.sol  (+9 more)
(+704 files in other folders)
