[tool.poetry]
name = "dual-governance"
version = "1.0.0"
description = "Lido Dual Governance"
authors = ["Lido"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
slither-analyzer = "^0.11.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
